--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1248,7 +1248,7 @@ Footer
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: initial;
   }
 }
 
